add npm, sass-lint, and run scripts

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Ge Yang's portfolio
+<head>
+    <link href="front-page/index.css" rel="stylesheet">
+</head>
+<body>
+<h1 class="red">
+    Ge Yang's portfolio
+</h1>
+</body>
