--- a/index.html
+++ b/index.html
@@ -2,32 +2,15 @@
     <script src="front-page/index.js"></script>
     <link href="front-page/index.css" rel="stylesheet">
 </head>
-<body>
-<div class="page-container">
-    <div class="text-pane id-designer">
-        <div id="text-box" class="text-box" id="box-1">
+<body class="page-container">
+    <div class="fixed-hero">
+        <div class="header-box">
             <h1>Ge Yang</h1>
-            <div class="subtitle">
-                <span>Designer</span>
-                <span>/</span>
-                <span>Developer</span>
-            </div>
-            <div class="main-text">
-                <p>User Experience Designer with a passion for designing simple and intuitive products that are fun to use. Minimalist who believes less  could be a form of sophistication.</p>
-            </div>
-            <div class="main-text" hidden="true">
-                <p>Full-stack developer with a PhD in physics, who enjoys building reusible modules with clean interfaces, with a knack for solving hard problems.<p>
-                <p>In 2015, I build a real-time collaborative server that forms the backbone of Escherpad.com</p>
-            </div>
+            <p>is a developer who enjoys solving humanist problems with an honest design. He has a knack for solving
+                hard problems, and is currently working full time building a new type of quantum computer.
+            </p>
         </div>
     </div>
-    <div class="photo-pane">
-        <div class="full-pane">
-            <img class="" id="designer" style="" src="front-page/Ge_Yang_office_yellow.jpg">
-        </div>
-        <div class="full-pane">
-            <img class="fit-height" id="developer" style="position: absolute;"  src="front-page/Ge_Yang_Yale_Physics_accelerator.jpg">
-        </div>
-    </div>
-</div>
+    <div class="fixed-hero-shadow"></div>
+    <div class="content-container"></div>
 </body>
