change person on resize

--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
 <body class="page-container">
     <div class="fixed-hero">
         <div class="header-box">
-            <h1>Ge Yang</h1>
-            <p>is a developer who enjoys solving humanist problems with an honest design. He has a knack for solving
-                hard problems, and is currently working full time building a new type of quantum computer.
+            <h1>
+                <span class="first-person">Hello, I'm </span>
+                Ge
+                <span class="third-person">Yang</span>
+            </h1>
+            <p>
+                <span class="third-person">is </span>
+                <span class="first-person">I am </span>
+                a developer who enjoys solving humanist problems with an honest design.
+                <span class="third-person">He has </span>
+                <span class="first-person">I have </span>
+                a knack for solving
+                hard problems, and
+                <span class="third-person">is </span>
+                <span class="first-person">am </span>
+                currently working full time building a new type of quantum computer.
             </p>
         </div>
     </div>
