--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
     <link href="front-page/index.css" rel="stylesheet">
 </head>
 <body class="page-container">
+    <div class="fixed-navbar">
+        <div class="page-width-container">
+            <a class="item">Home</a>
+            <div class="spacer"></div>
+            <a class="item emphasis">Ge Yang</a>
+            <div class="spacer"></div>
+            <a class="item">Projects</a>
+            <a class="item">Blog</a>
+        </div>
+    </div>
     <div class="fixed-hero">
         <div class="header-box">
-            <h1>
-                <span class="first-person">Hello, I'm </span>
-                Ge
-                <span class="third-person">Yang</span>
+            <h1 class="fade-in-30-0">
+                <span class="first-person">Hello, I'm Ge.</span>
+                <span class="third-person">Ge Yang</span>
             </h1>
-            <p>
+            <p class="fade-in-100-100">
                 <span class="third-person">is </span>
                 <span class="first-person">I am </span>
-                a developer who enjoys solving humanist problems with an honest design.
+                a developer who enjoys solving humanist problems with honest designs.
                 <span class="third-person">He has </span>
                 <span class="first-person">I have </span>
                 a knack for solving
@@ -24,6 +33,8 @@
             </p>
         </div>
     </div>
-    <div class="fixed-hero-shadow"></div>
-    <div class="content-container"></div>
+    <div class="fixed-hero-shadow">
+    </div>
+    <div class="content-container">
+    </div>
 </body>
