--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <div class="fixed-navbar">
         <div class="page-width-container">
             <a class="item">Home</a>
+            <div class="fixed-spacer" style="width: 45px;"></div>
             <div class="spacer"></div>
             <a class="item emphasis">Ge Yang</a>
             <div class="spacer"></div>
@@ -15,21 +16,26 @@
     </div>
     <div class="fixed-hero">
         <div class="header-box">
-            <h1 class="fade-in-30-0">
+            <h1 class="fade-in-header">
                 <span class="first-person">Hello, I'm Ge.</span>
                 <span class="third-person">Ge Yang</span>
             </h1>
-            <p class="fade-in-100-100">
-                <span class="third-person">is </span>
-                <span class="first-person">I am </span>
-                a developer who enjoys solving humanist problems with honest designs.
-                <span class="third-person">He has </span>
-                <span class="first-person">I have </span>
-                a knack for solving
-                hard problems, and
-                <span class="third-person">is </span>
-                <span class="first-person">am </span>
-                currently working full time building a new type of quantum computer.
+            <p>
+                <span class="fade-in-1">
+                    <span class="third-person">is </span>
+                    <span class="first-person">I am </span>
+                    a developer who enjoys solving humanist problems with honest designs.
+                </span>
+                <span class="fade-in-2">
+                    <span class="third-person">He has </span>
+                    <span class="first-person">I have </span>
+                    a knack for solving hard problems, and
+                </span>
+                <span class="fade-in-3">
+                    <span class="third-person">is </span>
+                    <span class="first-person">am </span>
+                    currently working full time building a new type of quantum computer.
+                </span>
             </p>
         </div>
     </div>
