--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body class="page-container">
     <div class="fixed-navbar">
-        <div class="page-width-container">
+        <div class="page-width-container fade-in-navbar">
             <a class="item">Home</a>
             <div class="fixed-spacer" style="width: 45px;"></div>
             <div class="spacer"></div>
