--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <head>
     <script src="front-page/index.js"></script>
     <link href="front-page/index.css" rel="stylesheet">
+    <meta name="HandheldFriendly" content="True">
+    <!--<meta name="MobileOptimized" content="320">-->
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0001, maximum-scale=1.0001">
 </head>
 <body class="page-container">
-    <div class="fixed-navbar">
-        <div class="page-width-container fade-in-navbar">
-            <a class="item">Home</a>
-            <div class="fixed-spacer" style="width: 45px;"></div>
-            <div class="spacer"></div>
-            <a class="item emphasis">Ge Yang</a>
-            <div class="spacer"></div>
-            <a class="item">Projects</a>
-            <a class="item">Blog</a>
-        </div>
+<div class="fixed-navbar">
+    <div class="page-width-container" style="top: -100px;">
+        <a class="item">Home</a>
+        <div class="fixed-spacer" style="width: 72px;"></div>
+        <div class="spacer"></div>
+        <a class="item emphasis">Ge Yang</a>
+        <div class="spacer"></div>
+        <a class="item">Projects</a>
+        <a class="item">Blog</a>
     </div>
-    <div class="fixed-hero">
-        <div class="header-box">
-            <h1 class="fade-in-header">
-                <span class="first-person">Hello, I'm Ge.</span>
-                <span class="third-person">Ge Yang</span>
-            </h1>
-            <p>
+</div>
+<div class="fixed-hero">
+    <div class="header-box">
+        <h1 class="fade-in-header">
+            <span class="first-person">Hello, I'm Ge.</span>
+            <span class="third-person">Ge Yang</span>
+        </h1>
+        <p>
                 <span class="fade-in-1">
                     <span class="third-person">is </span>
                     <span class="first-person">I am </span>
@@ -36,11 +39,11 @@
                     <span class="first-person">am </span>
                     currently working full time building a new type of quantum computer.
                 </span>
-            </p>
-        </div>
+        </p>
     </div>
-    <div class="fixed-hero-shadow">
-    </div>
-    <div class="content-container">
-    </div>
+</div>
+<div class="fixed-hero-shadow">
+</div>
+<div class="content-container">
+</div>
 </body>
