--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body class="page-container">
 <div class="fixed-navbar">
     <div class="page-width-container" style="top: -100px;">
-        <a class="item">Home</a>
-        <div class="fixed-spacer" style="width: 72px;"></div>
+        <a class="item" href="about">About</a>
+        <div class="fixed-spacer" style="width: 60px;"></div>
         <div class="spacer"></div>
-        <a class="item emphasis">Ge Yang</a>
+        <a class="item emphasis" href="">Ge Yang</a>
         <div class="spacer"></div>
-        <a class="item">Projects</a>
-        <a class="item">Blog</a>
+        <a class="item" href="projects">Projects</a>
+        <a class="item" href="blog">Blog</a>
     </div>
 </div>
 <div class="fixed-hero">
@@ -42,8 +42,35 @@
         </p>
     </div>
 </div>
-<div class="fixed-hero-shadow">
-</div>
+<div class="fixed-hero-shadow"></div>
 <div class="content-container">
+    <div class="card">
+        <img class="feature" src="projects/class-chat/escher-chat-home-page-screen-shot.png">
+        <div class="text-container">
+            <h1>Build Slack for classroom</h1>
+            <p>Escher Chat - Jan 2016</p>
+        </div>
+    </div>
+    <div class="card">
+        <img class="feature" src="projects/escherpad/escherpad-home-page-screen-shot.png">
+        <div class="text-container">
+            <h1>Write my own Google Doc</h1>
+            <p>Escherpad - Jan 2015</p>
+        </div>
+    </div>
+    <div class="card">
+        <img class="feature" src="projects/spruce-learning/spruce-learning-nantijiazi-register-step-01.png">
+        <div class="text-container">
+            <h1>Make it easier to find answers</h1>
+            <p>SpruceLearning - Jan 2013</p>
+        </div>
+    </div>
+    <div class="card">
+        <img class="feature" src="projects/sunshine-library/sunshine-library-xiaoshu-8-inch-tablet-render.jpg">
+        <div class="text-container">
+            <h1>An 8" tablet for low-income students</h1>
+            <p>XiaoShu, with Sunchine-library.org - Aug 2012</p>
+        </div>
+    </div>
 </div>
 </body>
