--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
     <div class="card">
         <img class="feature" src="projects/class-chat/escher-chat-home-page-screen-shot.png">
         <div class="text-container">
-            <h1>Build Slack for classroom</h1>
+            <h1>Building A Chat Stream for College Classrooms</h1>
             <p>Escher Chat - Jan 2016</p>
         </div>
     </div>
     <div class="card">
         <img class="feature" src="projects/escherpad/escherpad-home-page-screen-shot.png">
         <div class="text-container">
-            <h1>Write my own Google Doc</h1>
+            <h1>Writing My Own Google Doc for Mathematicians and Data Scientists</h1>
             <p>Escherpad - Jan 2015</p>
         </div>
     </div>
     <div class="card">
         <img class="feature" src="projects/spruce-learning/spruce-learning-nantijiazi-register-step-01.png">
         <div class="text-container">
-            <h1>Make it easier to find answers</h1>
+            <h1>Building An Academic Q&A Site for The Chinese Internet</h1>
             <p>SpruceLearning - Jan 2013</p>
         </div>
     </div>
     <div class="card">
         <img class="feature" src="projects/sunshine-library/sunshine-library-xiaoshu-8-inch-tablet-render.jpg">
         <div class="text-container">
-            <h1>An 8" tablet for low-income students</h1>
+            <h1>An 8" Tablet for Low-income Students</h1>
             <p>XiaoShu, with Sunchine-library.org - Aug 2012</p>
         </div>
     </div>
