update nav-bar, add section header

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <div class="fixed-navbar">
     <div class="page-width-container" style="top: -100px;">
         <a class="item" href="about">About</a>
-        <div class="fixed-spacer" style="width: 60px;"></div>
+        <div class="fixed-spacer" style="width: 45px;"></div>
         <div class="spacer"></div>
-        <a class="item emphasis" href="">Ge Yang</a>
+        <a class="item emphasis" href="">G.Y</a>
         <div class="spacer"></div>
-        <a class="item" href="projects">Projects</a>
+        <a class="item" href="#projects">Work</a>
         <a class="item" href="blog">Blog</a>
     </div>
 </div>
@@ -43,7 +43,10 @@
     </div>
 </div>
 <div class="fixed-hero-shadow"></div>
-<div class="content-container">
+<div id="projects" class="content-container">
+    <div class="section-header">
+        <h1>Projects</h1>
+    </div>
     <div class="card">
         <img class="feature" src="projects/class-chat/escher-chat-home-page-screen-shot.png">
         <div class="text-container">
