add scroll-down arrow

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         </p>
     </div>
 </div>
-<div class="fixed-hero-shadow"></div>
+<div class="fixed-hero-shadow fade-in-arrow">
+    <div class="arrow"></div>
+    <div class="label">scroll down</div>
+</div>
 <div id="projects" class="content-container">
     <div class="section-header">
         <h1>Projects</h1>
