fix grammatical mistake

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span class="fade-in-3">
                     <span class="third-person">is </span>
                     <span class="first-person">am </span>
-                    currently working full time building a new type of quantum computer.
+                    currently working full time on building a new type of quantum computer.
                 </span>
         </p>
     </div>
