add coming soon hover cover

--- a/index.html
+++ b/index.html
@@ -50,32 +50,44 @@
     <div class="section-header">
         <h1>Projects</h1>
     </div>
-    <div class="card">
+    <div class="card disabled">
         <img class="feature" src="projects/class-chat/escher-chat-home-page-screen-shot.png">
         <div class="text-container">
             <h1>Building A Chat Stream for College Classrooms</h1>
             <p>Escher Chat - Jan 2016</p>
         </div>
+        <div class="hover-cover">
+            <h1 style="background-color: rgba(38, 50, 63, 0.86)">COMING SOON</h1>
+        </div>
     </div>
-    <div class="card">
+    <div class="card disabled">
         <img class="feature" src="projects/escherpad/escherpad-home-page-screen-shot.png">
         <div class="text-container">
             <h1>Writing My Own Google Doc for Mathematicians and Data Scientists</h1>
             <p>Escherpad - Jan 2015</p>
         </div>
+        <div class="hover-cover">
+            <h1 style="background-color: #00b3ee">COMING SOON</h1>
+        </div>
     </div>
-    <div class="card">
+    <div class="card disabled">
         <img class="feature" src="projects/spruce-learning/spruce-learning-nantijiazi-register-step-01.png">
         <div class="text-container">
             <h1>Building An Academic Q&A Site for The Chinese Internet</h1>
             <p>SpruceLearning - Jan 2013</p>
         </div>
+        <div class="hover-cover">
+            <h1 style="background-color: rgba(0, 0, 0, 0.51)">COMING SOON</h1>
+        </div>
     </div>
-    <div class="card">
+    <div class="card disabled">
         <img class="feature" src="projects/sunshine-library/sunshine-library-xiaoshu-8-inch-tablet-render.jpg">
         <div class="text-container">
             <h1>An 8" Tablet for Low-income Students</h1>
             <p>XiaoShu, with Sunchine-library.org - Aug 2012</p>
+        </div>
+        <div class="hover-cover">
+            <h1 style="background-color: #87D241">COMING SOON</h1>
         </div>
     </div>
 </div>
