update coming soon copy

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p>Escher Chat - Jan 2016</p>
         </div>
         <div class="hover-cover">
-            <h1 style="background-color: rgba(38, 50, 63, 0.86)">COMING SOON</h1>
+            <h1 style="background-color: rgba(38, 50, 63, 0.86)">POST COMING SOON!</h1>
         </div>
     </div>
     <div class="card disabled">
@@ -67,7 +67,7 @@
             <p>Escherpad - Jan 2015</p>
         </div>
         <div class="hover-cover">
-            <h1 style="background-color: #00b3ee">COMING SOON</h1>
+            <h1 style="background-color: #00b3ee">POST COMING SOON!</h1>
         </div>
     </div>
     <div class="card disabled">
@@ -77,7 +77,7 @@
             <p>SpruceLearning - Jan 2013</p>
         </div>
         <div class="hover-cover">
-            <h1 style="background-color: rgba(0, 0, 0, 0.51)">COMING SOON</h1>
+            <h1 style="background-color: rgba(0, 0, 0, 0.51)">POST COMING SOON!</h1>
         </div>
     </div>
     <div class="card disabled">
@@ -87,7 +87,7 @@
             <p>XiaoShu, with Sunchine-library.org - Aug 2012</p>
         </div>
         <div class="hover-cover">
-            <h1 style="background-color: #87D241">COMING SOON</h1>
+            <h1 style="background-color: #87D241">POST COMING SOON!</h1>
         </div>
     </div>
 </div>
