add scaffolding code for contact me footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="arrow"></div>
     <div class="label">scroll down</div>
 </div>
-<div id="projects" class="content-container">
+<div id="projects" class="section">
     <div class="section-header">
         <h1>Projects</h1>
     </div>
@@ -91,4 +91,6 @@
         </div>
     </div>
 </div>
+<!--<div id="get-in-touch" class="section" style="background-color: white">-->
+<!--</div>-->
 </body>
