add blog page, add post template, example and styles

--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
+---
+---
 <head>
-    <script src="front-page/index.js"></script>
+    <title>Ge Yang | episodeyang.com </title>
     <link href="front-page/index.css" rel="stylesheet">
+    <script src="front-page/index.js"></script>
     <meta name="HandheldFriendly" content="True">
     <!--<meta name="MobileOptimized" content="320">-->
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0001, maximum-scale=1.0001">
 </head>
 <body class="page-container">
-<div class="fixed-navbar">
-    <div class="page-width-container" style="top: -100px;">
-        <a class="item" href="about">About</a>
-        <div class="fixed-spacer" style="width: 45px;"></div>
-        <div class="spacer"></div>
-        <a class="item emphasis" href="">G.Y</a>
-        <div class="spacer"></div>
-        <a class="item" href="#projects">Work</a>
-        <a class="item" href="blog">Blog</a>
-    </div>
-</div>
+    {% include navbar.html %}
 <div class="fixed-hero">
     <div class="header-box">
         <h1 class="fade-in-header">
@@ -91,6 +84,5 @@
         </div>
     </div>
 </div>
-<!--<div id="get-in-touch" class="section" style="background-color: white">-->
-<!--</div>-->
+<!--<div id="get-in-touch" class="section" style="background-color: white"></div>-->
 </body>
