update hover cover style

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <h1>Math Typesetting Done Beautifully, In Your Browser</h1>
             <p>Escherpad - Jan 2015</p>
         </div>
-        <div class="hover-cover">
-            <h1 style="background-color: #00b3ee">POST COMING SOON!</h1>
-        </div>
+        <!--<div class="hover-cover">-->
+            <!--<h1 style="background-color: #00b3ee">POST COMING SOON!</h1>-->
+        <!--</div>-->
     </a>
     <div class="card disabled">
         {% include full-width-image.html height="200px" position="center" src="/projects/spruce-learning/spruce-learning-nantijiazi-register-step-01.png" %}
