add google analytics tracking

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="front-page/index.css" rel="stylesheet">
     <script src="front-page/index.js"></script>
     <meta name="HandheldFriendly" content="True">
+    {% include google-analytics.html %}
     <!--<meta name="MobileOptimized" content="320">-->
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0001, maximum-scale=1.0001">
 </head>
