--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 ---
+layout: default
+title: "Ge Yang | episodeyang.com"
+excerpt: "Ge Yang is a developer who enjoys solving humanist problems with honest designs. I have a knack for solving hard problems, and am currently working full time on building a new type of quantum computer."
+snippet: "/front-page/ge-yang-portfolio-front-page-screenshot_2016-02-21.png"
+
 ---
 <head>
-    <title>Ge Yang | episodeyang.com </title>
     <link href="front-page/index.css" rel="stylesheet">
     <script src="front-page/index.js"></script>
     <meta name="HandheldFriendly" content="True">
-    {% include google-analytics.html %}
     <!--<meta name="MobileOptimized" content="320">-->
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0001, maximum-scale=1.0001">
 </head>
 <body class="page-container">
-    {% include navbar.html %}
+{% include navbar.html %}
 <div class="fixed-hero">
     <div class="header-box">
         <h1 class="fade-in-header">
@@ -45,7 +48,8 @@
         <h1>Projects</h1>
     </div>
     <a class="card disabled">
-        {% include full-width-image.html height="200px" position="top" src="/projects/class-chat/escher-chat-home-page-screen-shot.png" %}
+        {% include full-width-image.html height="200px" position="top"
+        src="/projects/class-chat/escher-chat-home-page-screen-shot.png" %}
         <div class="text-container">
             <h1>Building A Chat Stream for College Classrooms</h1>
             <p>Escher Chat - Jan 2016</p>
@@ -55,17 +59,19 @@
         </div>
     </a>
     <a class="card" href="/posts/2016-02-21-building-escherpad">
-        {% include full-width-image.html height="200px" position="top" src="/projects/escherpad/escherpad-home-page-screen-shot.png" %}
+        {% include full-width-image.html height="200px" position="top"
+        src="/projects/escherpad/escherpad-home-page-screen-shot.png" %}
         <div class="text-container">
             <h1>Math Typesetting Done Beautifully, In Your Browser</h1>
             <p>Escherpad - Jan 2015</p>
         </div>
         <!--<div class="hover-cover">-->
-            <!--<h1 style="background-color: #00b3ee">POST COMING SOON!</h1>-->
+        <!--<h1 style="background-color: #00b3ee">POST COMING SOON!</h1>-->
         <!--</div>-->
     </a>
     <div class="card disabled">
-        {% include full-width-image.html height="200px" position="center" src="/projects/spruce-learning/spruce-learning-nantijiazi-register-step-01.png" %}
+        {% include full-width-image.html height="200px" position="center"
+        src="/projects/spruce-learning/spruce-learning-nantijiazi-register-step-01.png" %}
         <div class="text-container">
             <h1>Building An Academic Q&A Site for The Chinese Internet</h1>
             <p>SpruceLearning - Jan 2013</p>
@@ -75,7 +81,8 @@
         </div>
     </div>
     <div class="card disabled">
-        {% include full-width-image.html height="200px" position="center" src="/projects/sunshine-library/sunshine-library-xiaoshu-8-inch-tablet-render.jpg" %}
+        {% include full-width-image.html height="200px" position="center"
+        src="/projects/sunshine-library/sunshine-library-xiaoshu-8-inch-tablet-render.jpg" %}
         <div class="text-container">
             <h1>An 8" Tablet for Low-income Students</h1>
             <p>XiaoShu, with Sunchine-library.org - Aug 2012</p>
