fix excerpt typo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Ge Yang | episodeyang.com"
-excerpt: "Ge Yang is a developer who enjoys solving humanist problems with honest designs. I have a knack for solving hard problems, and am currently working full time on building a new type of quantum computer."
+excerpt: "Ge Yang is a developer who enjoys solving humanist problems with honest designs. He has a knack for solving hard problems, and is currently working full time on building a new type of quantum computer."
 snippet: "/front-page/ge-yang-portfolio-front-page-screenshot_2016-02-21.png"
 ---
 <head>
