add throttling to scroll handler

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ snippet: "/front-page/ge-yang-portfolio-front-page-screenshot_2016-02-21.png"
 ---
 <head>
     <link href="front-page/index.css" rel="stylesheet">
-    <script src="front-page/index.js"></script>
+    <script src=""></script>
+    <script src="front-page/index.min.js"></script>
     <meta name="HandheldFriendly" content="True">
     <!--<meta name="MobileOptimized" content="320">-->
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0001, maximum-scale=1.0001">
